# Babes-Bolyai-University

./: README.md
First year/Semester 1/Computational Logic/: Logic circuits.pptx  Prezentare Microsoft PowerPoint nou.pptx
First year/Semester 2/Data Structures & Algorithms/dsa_lab1/: CMakeLists.txt  DynamicVector.cpp  DynamicVector.h  ExtendedTest.cpp  Set.cpp  Set.h  SetIterator.cpp  SetIterator.h  ShortTest.cpp  dsa_lab1.sln  dsa_lab1.vcxproj  dsa_lab1.vcxproj.filters  main.cpp
First year/Semester 2/Data Structures & Algorithms/dsa_lab1/Debug/: dsa_lab1.exe.recipe  dsa_lab1.ilk  dsa_lab1.vcxproj.FileListAbsolute.txt  vc143.idb
First year/Semester 2/Data Structures & Algorithms/dsa_lab1/Debug/dsa_lab1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  dsa_lab1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
First year/Semester 2/Data Structures & Algorithms/dsa_lab1/x64/Debug/: dsa_lab1.exe.recipe  dsa_lab1.ilk  dsa_lab1.vcxproj.FileListAbsolute.txt  vc143.idb
First year/Semester 2/Data Structures & Algorithms/dsa_lab1/x64/Debug/dsa_lab1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  dsa_lab1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
First year/Semester 2/Graph Algorithms/: graph.py  main.py
Second year/Semester 1/Computer Networks/: lab 6.pkt
Second year/Semester 1/Databases/: Generators.sql  SQLQuery1.sql  SQLQuery2.sql  SQLQuery3.sql  SQLQuery5.sql  SQLQuery6.sql  TestProcedures.sql  sql1.sql
Second year/Semester 1/Functional & Logic Programming/: P1.pl  Sem1.pl  l2.docx  (+1 more)
(+230 files in other folders)
